--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="mindy seto">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>mindyseto.github.io</title>
+    <title>mindyseto</title>
     <link rel="stylesheet" href="style.css" media="screen">
 <link rel="stylesheet" href="index-style.css" media="screen">
 
