--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="keywords" content="mindy seto">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>mindyseto</title>
+    <title>MSETO</title>
+
     <link rel="stylesheet" href="style.css" media="screen">
-<link rel="stylesheet" href="index-style.css" media="screen">
+    <link rel="stylesheet" href="index-style.css" media="screen">
 
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     
@@ -25,38 +26,24 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-96b3"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body">
+  <header class="u-clearfix u-header u-header" id="sec-96b3">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a class="u-image u-logo u-image-1">
           <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
-          <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
-              <svg><use xlink:href="#menu-hamburger"></use></svg>
-              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;"><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
-</symbol>
-</defs></svg>
-            </a>
-          </div>
-          <div class="u-nav-container-collapse">
-            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-              <div class="u-sidenav-overflow">
-                <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Page-2.html">Page 2</a>
-</li></ul>
-              </div>
-            </div>
-            <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-          </div>
+          <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;"></div>
         </nav>
-      </div></header>
+      </div>
+  </header>
     <section class="u-align-center u-clearfix u-palette-5-light-2 u-section-1" id="carousel_6c63">
       <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <div class="u-shape u-shape-svg u-text-white u-shape-1">
           <svg class="u-svg-link" preserveAspectRatio="none" viewBox="0 0 160 150" style=""><use xlink:href="#svg-32b4"></use></svg>
         </div>
-        <h2 class="u-text u-text-palette-5-dark-3 u-text-1">hello</h2>
-        <p class="u-text u-text-2">welcome to my github pages </p>
+        <h2 class="u-text u-text-palette-5-dark-3 u-text-1">hello :)</h2>
+        <p class="u-text u-text-2">[site under construction] </p>
         <a href="https://www.linkedin.com/in/mindy-seto/" class="u-btn u-btn-round u-button-style u-palette-5-dark-2 u-radius-50 u-text-body-alt-color u-btn-1">linkedin</a>
       </div>
     </section>
