--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <h2 class="u-text u-text-palette-5-dark-3 u-text-1">hello :)</h2>
         <p class="u-text u-text-2">[site under construction] </p>
         <a href="https://www.linkedin.com/in/mindy-seto/" class="u-btn u-btn-round u-button-style u-palette-5-dark-2 u-radius-50 u-text-body-alt-color u-btn-1">linkedin</a>
+        <a href="" class="u-btn u-btn-round u-button-style u-palette-5-dark-2 u-radius-50 u-text-body-alt-color u-btn-2">temp</a>
       </div>
     </section>
 
