--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		"url": "index.html",
 		"logo": "images/default-logo.png"
 }</script>
-    <meta property="og:title" content="f">
+    <meta property="og:title" content="a chill site for cool cats">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#3bbbce">
     <link rel="canonical" href="index.html">
