--- a/index.html
+++ b/index.html
@@ -10,16 +10,11 @@
 
     <link rel="stylesheet" href="style.css" media="screen">
     <link rel="stylesheet" href="index-style.css" media="screen">
+    <link rel="stylesheet" href="scruffs.css">
 
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     
-    <script type="application/ld+json">{
-		"@context": "http://schema.org",
-		"@type": "Organization",
-		"name": "",
-		"url": "index.html",
-		"logo": "images/default-logo.png"
-}</script>
+
     <meta property="og:title" content="a chill site for cool cats">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#3bbbce">
@@ -44,8 +39,13 @@
         </div>
         <h2 class="u-text u-text-palette-5-dark-3 u-text-1">hello :)</h2>
         <p class="u-text u-text-2">[site under construction] </p>
+        <div>
+          <div id="block">
+            <img src="images/scruffs.png" alt="Scruffs" class="center" width="20" height="20">
+          </div>
+        <script src="script.js"></script>
         <a href="https://www.linkedin.com/in/mindy-seto/" class="u-btn u-btn-round u-button-style u-palette-5-dark-2 u-radius-50 u-text-body-alt-color u-btn-1">linkedin</a>
-        <a href="" class="u-btn u-btn-round u-button-style u-palette-5-dark-2 u-radius-50 u-text-body-alt-color u-btn-2">temp</a>
+        </div>
       </div>
     </section>
 
