--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>MSETO</title>
 
-    <link rel="stylesheet" href="style.css" media="screen">
+<!--    Stylesheets-->
+    <link rel="stylesheet" href="style.css" media="sc reen">
     <link rel="stylesheet" href="index-style.css" media="screen">
     <link rel="stylesheet" href="scruffs.css">
-
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
-    
 
     <meta property="og:title" content="a chill site for cool cats">
     <meta property="og:type" content="website">
