Add play test page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <svg class="u-svg-link" preserveAspectRatio="none" viewBox="0 0 160 150" style=""><use xlink:href="#svg-32b4"></use></svg>
         </div>
         <h2 class="u-text u-text-palette-5-dark-3 u-text-1">hello :)</h2>
-        <p class="u-text u-text-2">[site under construction] </p>
+        <a href="playground/index.html" class="u-text u-text-2">[site under construction]</a>
         <div>
           <div id="block">
             <img src="images/scruffs.png" alt="Scruffs" class="center" width="20" height="20">
